--- a/index.html
+++ b/index.html
@@ -12,20 +12,32 @@
   </head>
   <body>
     <!-- beginning of the header stuff -->
-    <header>
-      <div class="headerpreset">
-      <center><div id="title"><em><b>Heabcz</b></em></div></center>
-        <nav>
-          <ul>
-            <li class="forheaderli"><a class="forheaderli" href="index.html">Home</a></li>
-            <li class="forheaderli"><a class="forheaderli" href="about.html">About</a></li>
-            <li class="forheaderli"><a class="forheaderli" href="ss.html">Software and Scripts</a></li>
-            <li class="forheaderli"><a class="forheaderli" href="freemoney.html">How to Make Easy $$$</a></li>
-            <li class="forheaderli"><a class="forheaderli" href="gamehosting.html">Game Hosting! (for School)</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+<nav>
+<ul>
+  <li>Home
+    <ul class="drop-menu menu-#{i}">
+      <a href="about.html"><li>About</li></a>
+    </ul>
+  </li>
+  <li>Business
+    <ul class="drop-menu menu-#{i}">
+      <a href="freemoney.html"><li>Free Money</li></a>
+
+    </ul>
+  </li>
+  <li>Games
+    <ul class="drop-menu menu-#{i}">
+      <a href="kronorium.html"><li>The Kronorium</li></a>
+      <a href="gamehosting.html"><li>Game Hosting</li></a>
+    </ul>
+  </li>
+  <li>Software
+    <ul class="drop-menu menu-#{i}">
+      <a href="ss.html"><li>Software and Scripts</li></a>
+    </ul>
+  </li>
+</ul>
+</nav>
     <!-- end of header stuff -->
     <!-- banner tings -->
     <section class="banner">
@@ -46,11 +58,10 @@
       <p id="welcomepara">
         <span style="font-size:32px; color:rgb(84, 135, 233); font-family: 'Merriweather' , serif;"><b><em>Welcome!</em></b></span>
         This website is kind of just a stupid test to practise my HTML and CSS and will 100% be improved while I get better
-        with HTML / CSS / JavaScript. Check out my socials above and drop me a follow / subscribe. This website is hosted using Apache2 on a Pi Zero. I bought the domain
-        from GoogleDomains.</p></div>
+        with HTML / CSS / JavaScript. Check out my socials above and drop me a follow / subscribe. This website is hosted with GitHub Pages.</p></div>
     <!--End of paragraph and tings -->
     <!-- Version number uploaded to pi -->
-    <a href="http://lmgtfy.com/?q=Is+benjheabcz+a+good+youtuber%3F"><p>Version 1.2 04/05/17</p></a>
+    <a href="http://lmgtfy.com/?q=Is+benjheabcz+a+good+youtuber%3F"><p>Version 1.3 29/05/17</p></a>
     </body>
     </html>
     <!-- Thanks for reading ;) btw this site will be improved loads-->
