--- a/gamehosting.html
+++ b/gamehosting.html
@@ -17,5 +17,9 @@
   based game hosted hear DM idrc. Also just hit me up with suggestions for any games you want me to host for you.</p>
   <a href="adarkroom-master/index2.html"><p class="gametags">In a Dark Room - Amazing game I reccomend that you play it.
     Huge credit to the creators and you can check their socials on the game itself.</p></a>
+  
+  <a href="hextris-gh-pages/index3.html"><p class ="gametags">
+   Hextris, a great shape based game. Check it out by clicking on this link.</p></a>
+    
   </body>
   </html>
