--- a/gamehosting.html
+++ b/gamehosting.html
@@ -15,13 +15,13 @@
   <center><h1 id="storetitle">Benjheabcz Game Hosting</h1></center>
   <p id="storeintro">I am not responsible for these play these games when you like. If you want your web
   based game hosted hear DM idrc. Also just hit me up with suggestions for any games you want me to host for you.</p>
-  <a href="gamehosting/adarkroom-master/index2.html"><p class="gametags">In a Dark Room - Amazing game I reccomend that you play it.
+  <a href="adarkroom-master/index2.html"><p class="gametags">In a Dark Room - Amazing game I reccomend that you play it.
     Huge credit to the creators and you can check their socials on the game itself.</p></a>
   
-  <a href="gamehosting/hextris-gh-pages/index3.html"><p class ="gametags">
+  <a href="hextris-gh-pages/index3.html"><p class ="gametags">
    Hextris, a great shape based game. Check it out by clicking on this link.</p></a>
     
-  <a href="gamehosting/superhotlinemiami2.html"><p class ="gametags"> SuperHotLineMiami! Available now on benjheath.github.io (not blocked by the school lmao)</p></a>
+  <a href="superhotlinemiami2.html"><p class ="gametags"> SuperHotLineMiami! Available now on benjheath.github.io (not blocked by the school lmao)</p></a>
     
   </body>
   </html>
