--- a/gamehosting.html
+++ b/gamehosting.html
@@ -21,7 +21,7 @@
   <a href="hextris-gh-pages/index3.html"><p class ="gametags">
    Hextris, a great shape based game. Check it out by clicking on this link.</p></a>
     
-  <a href="superhotlinemiami2.html"><p class ="gametags"> SuperHotLineMiami! Available now on benjheath.github.io (not blocked by the school lmao)</p></a>
+  <a href="superhotline-miami2.html"><p class ="gametags"> SuperHotLineMiami! Available now on benjheath.github.io (not blocked by the school lmao)</p></a>
     
   </body>
   </html>
