--- a/gamehosting.html
+++ b/gamehosting.html
@@ -21,7 +21,8 @@
   <a href="hextris-gh-pages/index3.html"><p class ="gametags">
    Hextris, a great shape based game. Check it out by clicking on this link.</p></a>
     
-  <a href="superhotline/index4.html"><p class ="gametags"> SuperHotLineMiami! Available now on benjheath.github.io (not blocked by the school lmao)</p></a>
+  <a href="http://commondatastorage.googleapis.com/itchio/html/56805/index.html">
+    <p class ="gametags"> SuperHotLineMiami! Available now on benjheath.github.io (not blocked by the school lmao)</p></a>
     
   </body>
   </html>
