--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
   </head>
   <body>
     <!-- beginning of the header stuff -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-8471623759941412",
+    enable_page_level_ads: true
+  });
+</script>
 <nav>
 <ul>
   <li>Home
@@ -72,6 +79,8 @@
     <!--End of paragraph and tings -->
     <!-- Version number uploaded to pi -->
     <a href="http://lmgtfy.com/?q=Is+benjheabcz+a+good+youtuber%3F"><p>Version 1.3 29/05/17</p></a>
+    
+
     </body>
     </html>
     <!-- Thanks for reading ;) btw this site will be improved loads-->
